Update NYU education section - professional yet impactful

--- a/index.html
+++ b/index.html
@@ -2262,7 +2262,7 @@
                 <div class="education-content glass-card">
                     <span class="education-year">2020 - 2024</span>
                     <h3 class="education-degree">Bachelor of Technology</h3>
-                    <h4 class="education-field">Computer Science & Engineering</h4>
+                    <h4 class="education-field">Artificial Intelligence</h4>
                     <div class="education-school">Amity University</div>
                     <div class="education-location">📍 Lucknow, India</div>
                     <div class="education-gpa">Gold Medalist</div>
