Update NYU education section - professional yet impactful

--- a/index.html
+++ b/index.html
@@ -2510,7 +2510,7 @@
                     <div class="experience-info">
                         <h3 class="position-title">Machine Learning Engineer</h3>
                         <div class="company-name">
-                            <a href="https://www.feynn.com/" target="_blank" rel="noopener noreferrer">Feynn Labs</a>
+                            <a href="https://feynnlabs.com/" target="_blank" rel="noopener noreferrer">Feynn Labs</a>
                         </div>
                         <div class="experience-period">Mar 2023 - May 2023</div>
                         <div class="experience-location">📍 Assam, India</div>
