Update NYU education section - professional yet impactful

--- a/index.html
+++ b/index.html
@@ -2746,7 +2746,7 @@
                     
                     <div class="linkedin-photos-grid">
                         <img src="images/stern.jpeg" alt="NYU Stern Building" onerror="this.style.display='none'">
-                        <div class="linkedin-photo-placeholder">EFL Event Stage</div>
+                        <img src="images/efleventstage.jpeg" alt="NYU Stern Building" onerror="this.style.display='none'">
                         <div class="linkedin-photo-placeholder">Networking Session</div>
                         <div class="linkedin-photo-placeholder">Speaker Panel</div>
                     </div><br>
