Add GeneGenius Co-Founder & COO position to experience section
Updated hero subtitle and added GeneGenius as the top experience card
with role details, highlights, and Web Summit Lisbon presentation.

--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,7 @@
             </h1>
             
             <p class="hero-subtitle">
-                MS Computer Engineering @ NYU • Software Engineer • Researcher
+                MS Computer Engineering @ NYU • Co-Founder & COO @ GeneGenius • Researcher
             </p>
             
             <div class="stats">
@@ -2433,6 +2433,38 @@
         </div>
 
         <div class="experience-grid">
+            <!-- GeneGenius -->
+            <div class="experience-card glass-card reveal" data-magnetic>
+                <div class="experience-header">
+                    <div class="company-logo">🧬</div>
+                    <div class="experience-info">
+                        <h3 class="position-title">Co-Founder & COO</h3>
+                        <div class="company-name">
+                            <a href="https://genegenius.ai" target="_blank" rel="noopener noreferrer">GeneGenius</a>
+                        </div>
+                        <div class="experience-period">Sep 2025 - Present</div>
+                        <div class="experience-location">📍 New York, USA</div>
+                    </div>
+                </div>
+                <div class="experience-description">
+                    Building the interpretation layer between raw genomic data and sign-out-ready clinical decisions. Leading engineering execution and operations end-to-end — from system architecture and pipeline performance to product delivery and clinical workflow fit.
+                </div>
+                <div class="experience-highlight">
+                    <span class="highlight-icon">🚀</span>
+                    <span class="highlight-text">Shipped working prototype: ACMG-style evidence automation, 3D protein visualization, and async whole-genome-scale interpretation pipeline</span>
+                </div>
+                <div class="experience-highlight">
+                    <span class="highlight-icon">🌍</span>
+                    <span class="highlight-text">Presented at Web Summit Lisbon 2025; invited to explore Qatar's national startup ecosystem via the Embassy of Qatar in D.C.</span>
+                </div>
+                <div class="experience-tech">
+                    <span class="tech-tag">Genomics</span>
+                    <span class="tech-tag">AI/ML</span>
+                    <span class="tech-tag">Clinical Pipelines</span>
+                    <span class="tech-tag">Operations</span>
+                </div>
+            </div>
+
             <!-- Tiny Archives -->
             <div class="experience-card glass-card reveal" data-magnetic>
                 <div class="experience-header">
@@ -3152,7 +3184,206 @@
             </div>
         </div>
     </section>
+    <!-- Certifications Section -->
+    <section id="certifications" class="section certifications">
+        <div class="section-header reveal">
+            <h2 class="section-title">Certifications & Credentials</h2>
+            <p class="section-subtitle">Building expertise through continuous learning</p>
+        </div>
 
+        <div class="certifications-container">
+            <!-- Professional Certifications -->
+            <div class="cert-category reveal">
+                <h3 class="cert-category-title">🎓 Professional Certifications</h3>
+                <div class="cert-grid">
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon">
+                                <img src="https://images.credly.com/images/4e3d6f9f-55d7-4ea7-b0e6-f4d4ff543e22/image.png" alt="Cisco" onerror="this.style.display='none'">
+                                <span class="cert-icon-fallback">🌐</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">CCNA: Introduction to Networks</h4>
+                                <div class="cert-issuer">Cisco Networking Academy</div>
+                                <div class="cert-date">January 2024</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Successfully completed Cisco's CCNA course covering networking fundamentals, IP addressing, protocols, data link layer support, Ethernet connectivity, switches, routers, and devices configuration.
+                        </div>
+                        <div class="cert-actions">
+                            <a href="https://www.credly.com/badges/ff61a7a5-6613-43b9-a90f-fdd2153cc2f0/linked_in_profile" class="cert-verify-btn" target="_blank" rel="noopener noreferrer">
+                                Verify on Credly →
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon">
+                                <span class="cert-icon-fallback">🔐</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Embedded Security CTF</h4>
+                                <div class="cert-issuer">Klefki DSCI</div>
+                                <div class="cert-date">October 2022</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Achieved 14556th position in the Embedded Security Capture The Flag competition organized by Data Security Council of India.
+                        </div>
+                        <div class="cert-actions">
+                            <a href="https://verify.klefki.io/credential?tag=12c6c1f5-d1ac-4a84-b543-29b803576016&no=14556" class="cert-verify-btn" target="_blank" rel="noopener noreferrer">
+                                Verify Certificate →
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon">
+                                <span class="cert-icon-fallback">🎩</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Be A White Hat Hacker and Pen Tester</h4>
+                                <div class="cert-issuer">Eduonix Learning Solutions</div>
+                                <div class="cert-date">July 2021</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Completed comprehensive training in ethical hacking, penetration testing methodologies, and cybersecurity best practices.
+                        </div>
+                        <div class="cert-actions">
+                            <a href="https://www.eduonix.com/certificate/d841eced28" class="cert-verify-btn" target="_blank" rel="noopener noreferrer">
+                                View Certificate →
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon">
+                                <span class="cert-icon-fallback">🌍</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Field Data Collection & Contact Follow-up</h4>
+                                <div class="cert-issuer">World Health Organization</div>
+                                <div class="cert-date">June 2020</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Certified in WHO's field data collection methodologies, chains of transmission analysis, and contact tracing protocols.
+                        </div>
+                        <div class="cert-actions">
+                            <button class="cert-verify-btn" disabled>
+                                WHO Certified
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Virtual Experience Programs -->
+            <div class="cert-category reveal">
+                <h3 class="cert-category-title">💼 Virtual Experience Programs</h3>
+                <div class="cert-grid">
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon goldman">
+                                <span class="cert-icon-text">GS</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Engineering Virtual Program</h4>
+                                <div class="cert-issuer">Goldman Sachs</div>
+                                <div class="cert-date">June 2022</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Completed practical task modules including crack leaked password database security analysis and implementation.
+                        </div>
+                        <div class="cert-actions">
+                            <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Goldman%20Sachs/NPdeQ43o8P9HJmJzg_Goldman%20Sachs_rLgvrKhStAxuvSCJo_1654404697970_completion_certificate.pdf" class="cert-verify-btn" target="_blank" rel="noopener noreferrer">
+                                View Certificate →
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="cert-card glass-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon jpmorgan">
+                                <span class="cert-icon-text">JPM</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Investment Banking Virtual Experience</h4>
+                                <div class="cert-issuer">JPMorgan Chase & Co.</div>
+                                <div class="cert-date">June 2022</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            Completed modules on M&A targets identification, auction process, financial analysis, and investment recommendations.
+                        </div>
+                        <div class="cert-actions">
+                            <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/JPMorgan%20Chase/YD2kY95RQxQtXxFTS_JPMorgan%20Chase_rLgvrKhStAxuvSCJo_1655813991687_completion_certificate.pdf" class="cert-verify-btn" target="_blank" rel="noopener noreferrer">
+                                View Certificate →
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Volunteer & Recognition -->
+            <div class="cert-category reveal">
+                <h3 class="cert-category-title">🤝 Volunteer & Recognition</h3>
+                <div class="cert-grid">
+                    <div class="cert-card glass-card wide-card" data-magnetic>
+                        <div class="cert-header">
+                            <div class="cert-icon volunteer">
+                                <span class="cert-icon-fallback">❤️</span>
+                            </div>
+                            <div class="cert-info">
+                                <h4 class="cert-title">Community Development Volunteer</h4>
+                                <div class="cert-issuer">Rakhtaab Foundation</div>
+                                <div class="cert-date">February 2023 - February 2024</div>
+                            </div>
+                        </div>
+                        <div class="cert-description">
+                            A year of transformative community service working with underprivileged children. Led educational initiatives, created learning resources, and built strong community partnerships. Facilitated tutoring sessions and extracurricular activities that empowered children to believe in themselves and dream big.
+                        </div>
+                        <div class="cert-highlights">
+                            <span class="cert-highlight">📚 Education Facilitator</span>
+                            <span class="cert-highlight">🎯 Resource Development</span>
+                            <span class="cert-highlight">🤝 Community Outreach</span>
+                            <span class="cert-highlight">⭐ 1 Year of Service</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Certification Stats -->
+            <div class="cert-stats reveal">
+                <div class="cert-stat-item glass-card" data-magnetic>
+                    <div class="cert-stat-icon">📜</div>
+                    <div class="cert-stat-number" data-value="7">0</div>
+                    <div class="cert-stat-label">Certifications</div>
+                </div>
+                <div class="cert-stat-item glass-card" data-magnetic>
+                    <div class="cert-stat-icon">🏢</div>
+                    <div class="cert-stat-number" data-value="6">0</div>
+                    <div class="cert-stat-label">Organizations</div>
+                </div>
+                <div class="cert-stat-item glass-card" data-magnetic>
+                    <div class="cert-stat-icon">📅</div>
+                    <div class="cert-stat-number" data-value="4">0</div>
+                    <div class="cert-stat-label">Years of Learning</div>
+                </div>
+                <div class="cert-stat-item glass-card" data-magnetic>
+                    <div class="cert-stat-icon">✅</div>
+                    <div class="cert-stat-number" data-value="100">0</div>
+                    <div class="cert-stat-label">% Verified</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Research Section -->
     <section id="research" class="section research">
         <div class="section-header reveal">
