Replace incorrect paper with IEEE CISCON 2025 smart contract healthcare paper

--- a/index.html
+++ b/index.html
@@ -3180,16 +3180,16 @@
 
             <div class="research-card glass-card reveal" data-magnetic>
                 <div class="research-number">11</div>
-                <h3 class="research-title">Prenatal Healthcare Framework Using IoMT Data Analytics</h3>
-                <div class="research-venue">IGI Global 2023</div>
+                <h3 class="research-title">Permission-Based Smart Contract Framework for Decentralized and Secure Medical Record Management in Healthcare</h3>
+                <div class="research-venue">IEEE CISCON 2025</div>
                 <div class="research-metrics">
-                    <span class="metric-tag">IoMT</span>
+                    <span class="metric-tag">Blockchain</span>
                     <span class="metric-tag">Healthcare</span>
                 </div>
                 <p class="research-desc">
-                    Proposed an IoMT-based healthcare framework for prenatal care — remote mother and fetal surveillance using wearable sensors, edge computing, and data analytics for smart healthcare delivery.
+                    Permission-based smart contracts enabling patients to fully control their health records on blockchain. Dynamic access granting/revocation for providers with transparent permission registry and tamper-proof architecture.
                 </p>
-                <a href="https://www.igi-global.com/chapter/prenatal-healthcare-framework-using-iomt-data-analytics/313070" class="research-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://ieeexplore.ieee.org/abstract/document/11337695" class="research-link" target="_blank" rel="noopener noreferrer">
                     View Paper →
                 </a>
             </div>
