Add live demo links for NeuroCardiac Shield and Lighthouse projects
- NeuroCardiac Shield: https://neurocardiac-shield.netlify.app/
- Lighthouse: https://lighthouse-neon.vercel.app/

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,8 @@
                             <div><div class="project-stat-val">76</div><div class="project-stat-lbl">ML Features</div></div>
                             <div><div class="project-stat-val">81.1%</div><div class="project-stat-lbl">XGBoost Acc.</div></div>
                         </div>
-                        <a href="https://github.com/bblackheart013/neurocardiac-shield" class="project-link" target="_blank" rel="noopener noreferrer">View on GitHub &rarr;</a>
+                        <a href="https://neurocardiac-shield.netlify.app/" class="project-link" target="_blank" rel="noopener noreferrer">Live Demo &rarr;</a>
+                        <a href="https://github.com/bblackheart013/neurocardiac-shield" class="project-link" target="_blank" rel="noopener noreferrer">GitHub &rarr;</a>
                     </div>
                 </div>
 
@@ -1075,7 +1076,8 @@
                             <div><div class="project-stat-val">7+</div><div class="project-stat-lbl">NASA Sources</div></div>
                             <div><div class="project-stat-val">&lt;2s</div><div class="project-stat-lbl">Response</div></div>
                         </div>
-                        <a href="https://github.com/bblackheart013/lighthouse" class="project-link" target="_blank" rel="noopener noreferrer">View on GitHub &rarr;</a>
+                        <a href="https://lighthouse-neon.vercel.app/" class="project-link" target="_blank" rel="noopener noreferrer">Live Demo &rarr;</a>
+                        <a href="https://github.com/bblackheart013/lighthouse" class="project-link" target="_blank" rel="noopener noreferrer">GitHub &rarr;</a>
                     </div>
                 </div>
 
