--- a/index.html
+++ b/index.html
@@ -182,6 +182,43 @@
         .mobile-nav-links li:nth-child(8) a { transition-delay: 0.4s; }
         .mobile-nav-links li:nth-child(9) a { transition-delay: 0.45s; }
 
+        /* === PROGRESSIVE DISCLOSURE === */
+        .exp-grid .card:not(.expanded) .exp-desc,
+        .exp-grid .card:not(.expanded) .exp-highlight,
+        .exp-grid .card:not(.expanded) .exp-tags {
+            display: none;
+        }
+        .edu-card:not(.expanded) .edu-desc,
+        .edu-card:not(.expanded) .edu-achievements {
+            display: none;
+        }
+        .card-toggle {
+            font-family: var(--font-m); font-size: 11px;
+            color: var(--accent); cursor: pointer;
+            margin-top: 10px; letter-spacing: 0.05em;
+            text-transform: uppercase; transition: opacity 0.2s;
+        }
+        .card-toggle:hover { opacity: 0.7; }
+        .card-toggle::after { content: ' +'; font-weight: 700; }
+        .expanded .card-toggle::after { content: ' \2212'; }
+        .show-more-btn {
+            display: block; margin: 24px auto 0;
+            padding: 10px 28px;
+            background: rgba(255,255,255,0.04);
+            border: 1px solid var(--border);
+            color: var(--text-secondary);
+            font-family: var(--font-m); font-size: 12px;
+            border-radius: 8px; cursor: pointer;
+            transition: all 0.2s; letter-spacing: 0.05em;
+        }
+        .show-more-btn:hover {
+            background: var(--accent-dim);
+            border-color: var(--accent-border);
+            color: var(--accent);
+        }
+        .research-card.hidden-card { display: none; }
+        .awards-grid.hidden-section { display: none; }
+
         /* === SECTIONS === */
         .section { padding: 120px 40px; position: relative; z-index: 1; }
         .section-alt { background: var(--bg-alt); }
@@ -883,7 +920,7 @@
                 </div>
                 <div class="exp-desc">Building the interpretation layer between raw genomic data and sign-out-ready clinical decisions. Leading engineering execution and operations end-to-end — from system architecture and pipeline performance to product delivery and clinical workflow fit.</div>
                 <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Shipped working prototype: ACMG-style evidence automation, 3D protein visualization, and async whole-genome-scale interpretation pipeline</span></div>
-                <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Presented at Web Summit Lisbon 2025; invited to explore Qatar's national startup ecosystem via the Embassy of Qatar in D.C.</span></div>
+                <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Sponsored by Web Summit to attend Lisbon 2025; invited to explore Qatar's national startup ecosystem via the Embassy of Qatar in D.C.</span></div>
                 <div class="exp-tags"><span class="tag">Genomics</span><span class="tag">AI/ML</span><span class="tag">Clinical Pipelines</span><span class="tag">Operations</span></div>
             </div>
 
@@ -898,6 +935,7 @@
                             <div class="exp-meta">May 2025 - Sep 2025 &middot; New York, USA</div>
                         </div>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <div class="exp-desc">Evaluated technology stacks and provided strategic guidance to AI/ML startups in NYU's elite accelerator program.</div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Screened 120+ startups using custom 15-point evaluation rubric</span></div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Portfolio companies raised $18M+ in follow-on funding</span></div>
@@ -911,12 +949,13 @@
                         <div class="exp-info">
                             <h3 class="exp-title">Blockchain Researcher</h3>
                             <div class="exp-company"><a href="https://blockchain.stern.nyu.edu/" target="_blank" rel="noopener noreferrer">NYU Blockchain Lab</a></div>
-                            <div class="exp-meta">Sep 2024 - Present &middot; New York, USA</div>
+                            <div class="exp-meta">Sep 2024 - May 2025 &middot; New York, USA</div>
                         </div>
                     </div>
-                    <div class="exp-desc">Conducting research on Zero-Knowledge Proofs (ZKP) for decentralized governance systems and DeFi protocols. Building privacy-preserving voting mechanisms and identity solutions.</div>
-                    <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Developing ZKP-based governance for DeFi protocols</span></div>
-                    <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Implementing ERC-725 identity standards for digital democracy</span></div>
+                    <div class="card-toggle">View details</div>
+                    <div class="exp-desc">Conducted research on Zero-Knowledge Proofs (ZKP) for decentralized governance systems and DeFi protocols. Built privacy-preserving voting mechanisms and identity solutions.</div>
+                    <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Developed ZKP-based governance for DeFi protocols</span></div>
+                    <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Implemented ERC-725 identity standards for digital democracy</span></div>
                     <div class="exp-tags"><span class="tag">ZKP</span><span class="tag">Solidity</span><span class="tag">DeFi</span><span class="tag">Governance</span></div>
                 </div>
 
@@ -930,6 +969,7 @@
                             <div class="exp-meta">Jan 2025 - May 2025 &middot; New York, USA</div>
                         </div>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <div class="exp-desc">Working on Lind3i - a WebAssembly sandbox for secure AI system deployment. Collaborating with Intel on kernel isolation research.</div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Developing secure sandboxing solutions for AI workloads</span></div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Collaborating with Intel on kernel-level security research</span></div>
@@ -946,6 +986,7 @@
                             <div class="exp-meta">Jun 2022 - Aug 2024 &middot; Lucknow, India</div>
                         </div>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <div class="exp-desc">Founded and built an enterprise HRMS platform serving 50+ SMB clients. Led technical architecture and product development.</div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Achieved 99.9% uptime and 32% productivity improvements</span></div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Built from 0 to 50+ enterprise clients in 2 years</span></div>
@@ -962,6 +1003,7 @@
                             <div class="exp-meta">May 2023 - Jun 2023 &middot; Lucknow, India</div>
                         </div>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <div class="exp-desc">Developed Leave Management System for UPMRC. Led a team of 5 engineers to deliver the project on time.</div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Led 5-member engineering team to successful delivery</span></div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Delivered enterprise solution within tight deadline</span></div>
@@ -978,6 +1020,7 @@
                             <div class="exp-meta">Mar 2023 - May 2023 &middot; Assam, India</div>
                         </div>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <div class="exp-desc">Led a team to develop a Travel Recommendation System using collaborative filtering techniques.</div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Built recommendation engine with 85% accuracy</span></div>
                     <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Processed 100K+ travel data points for insights</span></div>
@@ -1009,13 +1052,14 @@
                         <span class="tag">EFL Startup Analyst</span><span class="tag">Stern Digital Currency</span>
                         <span class="tag">AI Hardware Builder</span><span class="tag">Co-Founded GeneGenius</span>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <p class="edu-desc">Not your typical grad student — I'm here building what's next. Co-founded GeneGenius during my MS, went through NYU Stern's Endless Frontier Labs evaluating 120+ startups, took the Stern Digital Currency course to go deep on blockchain economics, and partnered with Intel through NYU SSL to pioneer kernel isolation for AI workloads. From FPGA hardware achieving 4000x speedup to ZKP governance systems — every semester has been a launchpad.</p>
                     <div class="edu-achievements">
-                        <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>Co-Founded GeneGenius: Building the interpretation layer for genomic data — presented at Web Summit Lisbon 2025</span></div>
+                        <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>Co-Founded GeneGenius: Building the interpretation layer for genomic data — sponsored by Web Summit Lisbon 2025</span></div>
                         <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>NYU Stern EFL: Digital Tech Analyst — screened 120+ AI/ML startups, portfolio raised $18M+ in follow-on funding</span></div>
                         <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>NYU Stern Digital Currency: Studied blockchain economics, tokenomics, and decentralized finance protocols under Stern faculty</span></div>
                         <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>NYU SSL: Partnering with Intel on WebAssembly sandboxing — securing AI infrastructure at the kernel level</span></div>
-                        <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>NYU Blockchain Lab: Building ZKP governance systems — making democracy private and verifiable</span></div>
+                        <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>NYU Blockchain Lab: Built ZKP governance systems — making democracy private and verifiable</span></div>
                         <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>AI Hardware Accelerator: Designed FPGA systems achieving 4000x speedup. Published in IEEE.</span></div>
                     </div>
                 </div>
@@ -1034,6 +1078,7 @@
                         <span class="tag">Gold Medalist</span><span class="tag">Best Researcher</span>
                         <span class="tag">11 Publications</span><span class="tag">Innovation Award</span>
                     </div>
+                    <div class="card-toggle">View details</div>
                     <p class="edu-desc">Graduated with distinction and multiple awards. Published 11 research papers in top-tier IEEE and Springer conferences. Founded a successful startup during undergraduate studies.</p>
                     <div class="edu-achievements">
                         <div class="edu-ach-item"><span class="edu-ach-icon">&#9656;</span><span>University Gold Medal for Academic Excellence</span></div>
@@ -1239,7 +1284,7 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/10489614" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">05</div>
                     <h3 class="research-title">Decentralized Identity Management Using Blockchain: A Comprehensive Survey</h3>
                     <div class="research-venue">IEEE Access 2024</div>
@@ -1248,7 +1293,7 @@
                     <a href="#" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">06</div>
                     <h3 class="research-title">AI-Driven Smart Contract Vulnerability Detection: A Deep Learning Approach</h3>
                     <div class="research-venue">ACM Computing Surveys 2024</div>
@@ -1257,7 +1302,7 @@
                     <a href="#" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">07</div>
                     <h3 class="research-title">Quantum-Resistant Cryptographic Protocols for Blockchain Networks</h3>
                     <div class="research-venue">Nature Communications 2024</div>
@@ -1266,7 +1311,7 @@
                     <a href="#" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">08</div>
                     <h3 class="research-title">Evolutionary Analysis: Classical Bits to Quantum Qubits</h3>
                     <div class="research-venue">Springer Quantum Computing 2023</div>
@@ -1275,7 +1320,7 @@
                     <a href="https://link.springer.com/chapter/10.1007/978-981-19-9530-9_7" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">09</div>
                     <h3 class="research-title">Simulating Quantum Principles: Qiskit Versus Cirq</h3>
                     <div class="research-venue">Springer 2023</div>
@@ -1284,7 +1329,7 @@
                     <a href="https://link.springer.com/chapter/10.1007/978-981-19-9530-9_18" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">10</div>
                     <h3 class="research-title">Functional Analysis of Blockchain Consensus Algorithms</h3>
                     <div class="research-venue">Elsevier 2023</div>
@@ -1293,7 +1338,7 @@
                     <a href="https://www.sciencedirect.com/science/article/abs/pii/B978032396146200005X" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
 
-                <div class="card research-card gs">
+                <div class="card research-card gs hidden-card">
                     <div class="research-num">11</div>
                     <h3 class="research-title">Emerging Trend in Supply Chain Blockchain and Industry 4.0</h3>
                     <div class="research-venue">Taylor &amp; Francis 2023</div>
@@ -1302,6 +1347,7 @@
                     <a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003509561-6/emerging-trend-supply-chain-blockchain-industry-4-0-mohd-sarfaraz-faiyaz-garima-srivastava-shikha-singh-sachin-kumar" class="research-btn" target="_blank" rel="noopener noreferrer">View Paper &rarr;</a>
                 </div>
             </div>
+            <button class="show-more-btn" data-target=".research-card.hidden-card">Show all 11 publications</button>
         </div>
     </section>
 
@@ -1312,7 +1358,8 @@
             <h2 class="section-heading gs">Awards &amp; Achievements</h2>
             <p class="section-desc gs">Continuously excelling and pushing boundaries.</p>
 
-            <div class="awards-grid">
+            <button class="show-more-btn" data-target=".awards-grid" style="margin-bottom: 24px;">View all awards</button>
+            <div class="awards-grid hidden-section">
                 <div class="gs">
                     <h3 class="award-cat-title">Academic Excellence</h3>
                     <div class="awards-list">
@@ -1825,6 +1872,26 @@
                 slider.scrollBy({ left: cardW, behavior: 'smooth' });
             });
         }
+
+        // === PROGRESSIVE DISCLOSURE ===
+        document.querySelectorAll('.card-toggle').forEach(toggle => {
+            toggle.addEventListener('click', e => {
+                e.stopPropagation();
+                const card = toggle.closest('.card');
+                card.classList.toggle('expanded');
+                toggle.textContent = card.classList.contains('expanded') ? 'Hide details' : 'View details';
+            });
+        });
+
+        document.querySelectorAll('.show-more-btn').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const sel = btn.dataset.target;
+                document.querySelectorAll(sel).forEach(el => {
+                    el.classList.remove('hidden-card', 'hidden-section');
+                });
+                btn.remove();
+            });
+        });
     });
     </script>
 </body>
