Update GeneGenius - Delaware C-Corp operating from NYC

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                         <div class="exp-meta">Sep 2025 - Present &middot; New York, USA</div>
                     </div>
                 </div>
-                <div class="exp-desc">Building the interpretation layer between raw genomic data and sign-out-ready clinical decisions. Leading engineering execution and operations end-to-end — from system architecture and pipeline performance to product delivery and clinical workflow fit.</div>
+                <div class="exp-desc">Delaware C-Corp operating from NYC. Building the interpretation layer between raw genomic data and sign-out-ready clinical decisions. Leading engineering execution and operations end-to-end — from system architecture and pipeline performance to product delivery and clinical workflow fit.</div>
                 <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Shipped working prototype: ACMG-style evidence automation, 3D protein visualization, and async whole-genome-scale interpretation pipeline</span></div>
                 <div class="exp-highlight"><span class="exp-highlight-icon">&#9656;</span><span class="exp-highlight-text">Sponsored by Web Summit to attend Lisbon 2025; invited to explore Qatar's national startup ecosystem via the Embassy of Qatar in D.C.</span></div>
                 <div class="exp-tags"><span class="tag">Genomics</span><span class="tag">AI/ML</span><span class="tag">Clinical Pipelines</span><span class="tag">Operations</span></div>
